--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 </head>
 
 <body>
-    <div>
-
-
-
-        <p>sdwdw</p>
+    <div class="main">
+        This is my new react!
+        Not now!
     </div>
 </body>
 
