--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="main">
         This is my new react!
         Not now! ZZZZZ
-        Using branch on GIT
+        Using branch on GITz
     </div>
 </body>
 
