--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
     <div class="main">
-        This is my new react!
-        Not now! ZZZZZ
-        Using branch on GITz
+        <p>
+        This is my first day of being a Training as Front End Dev!
+        </p>
     </div>
 </body>
 
